--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-dom": "17.0.2",
     "react-router-dom": "6.0.0-beta.0",
     "react-scripts": "4.0.0",
-    "uuid": "8.3.2"
+    "uuid": "8.3.2",
+    "react-toastify": "^7.0.3"
   },
   "devDependencies": {
     "@babel/runtime": "7.13.8",
