--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
   ],
   "main": "src/index.js",
   "dependencies": {
+    "axios": "^0.21.1",
     "history": "5.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-router-dom": "6.0.0-beta.0",
     "react-scripts": "4.0.0",
-    "uuid": "8.3.2",
-    "react-toastify": "^7.0.3"
+    "react-toastify": "^7.0.3",
+    "uuid": "8.3.2"
   },
   "devDependencies": {
     "@babel/runtime": "7.13.8",
