--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "main": "src/index.js",
   "dependencies": {
     "axios": "^0.21.1",
+    "dotenv": "^10.0.0",
     "history": "5.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
